Tiny fixes.