@@ -1,16 +1,13 @@
 package io.example;
 
 import io.example.domain.dto.CreateUserRequest;
-import io.example.domain.model.User;
 import io.example.service.UserService;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.ApplicationListener;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.List;
 
 @SpringBootApplication
@@ -25,12 +22,12 @@ public class Application {
 @Component
 class DatabaseInitializer implements ApplicationListener<ApplicationReadyEvent> {
 
-    private final List<String> usernames = Arrays.asList(
+    private final List<String> usernames = List.of(
             "ada.lovelace@nix.io",
             "alan.turing@nix.io",
             "dennis.ritchie@nix.io"
     );
-    private final List<String> fullNames = Arrays.asList(
+    private final List<String> fullNames = List.of(
             "Ada Lovelace",
             "Alan Turing",
             "Dennis Ritchie"
